--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #2a2a72;
+    background-color: #361d32;
     color: #fff;
     font-family: 'Poppins', 'sans-serif';
     margin: 0;
@@ -27,7 +27,7 @@ body {
 .user-form input {
     width: 100%;
     display: block;
-    background-color: #4c2885;
+    background-color: #543c52;
     border: none;
     border-radius: 10px;
     color: #fff;
