--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body {
 
 .cards {
     max-width: 800px;
-    background-color: #4c2885;
+    background-color: #543c52;
     border-radius: 20px;
     box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05), 0 15px 40px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -58,7 +58,7 @@ body {
 
 .avatar {
     border-radius: 50%;
-    border: 10px solid #2a2a72;
+    border: 10px solid #361d32;
     height: 150px;
     width: 150px;
 }
@@ -93,7 +93,7 @@ body {
 .repo {
     text-decoration: none;
     color: #fff;
-    background-color: #2a2a72;
+    background-color: #361d32;
     font-size: 0.7rem;
     padding: 0.25rem 0.5rem;
     margin-right: 0.5rem;
